--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             <div class = "col-sm-5" >
 <!-- 460 510-->
                 <div class="panel form">
-                    <form class="form-horizontal" method="post" action = "action.php">
+                    <form class="form-horizontal" method="get" action = "action-get.php">
+                        <!--  <form class="form-horizontal" method="post" action = "action.php">-->
                         <h2>
                             Instant Quote:
                         </h2>
